##Text encoding: utf-8

2005-03-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* Doxyfile: updated to recent doxygen version.
	* gcu/Makefile.am: fixed more build issues.
	* gcu/object.h: fixed a doxygen related warning.

2005-03-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* Doxyfile: updated version.
	* gcu.pc.in: updated name and dependencies.
	* gcu/Makefile.am: fixed some build issues.

2005-03-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: updated version to 0.4.1.
	* gcu/object.cc: fixed a critical (and trivial) bug in Object::AddType.

2005-03-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystaldoc.h: removed reference to crystalbond.h.

2005-03-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* AUTHORS: add new german translator.
	* gcu/Makefile.am: rmoved unimplemented stuff.
	* gcu/crystalbond.cc: ditto.
	* gcu/crystalbond.h: ditto.

2005-03-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* Doxyfile: updated version to 0.4.0.
	* Makefile.am: remove 0.3 stuff.
	* configure.ac: updated version to 0.3.90 (0.4.0-beta1).
	* gcu/Makefile.am: remove 0.3 stuff and add gchem3d-viewer.
	* gcu/bonobo-control.cc: remove unstable in control name.
	* gcu/gchem3d-viewer.c: (main): imported from 0-2 branch.
	* gcu/gchem3d-viewer.desktop.in: imported from 0-2 branch.
	* gcu/gchem3d.server.in.in: imported from 0-2 branch.
	* tests/Makefile.am: remove 0.3 stuff.
	* tests/testbonobocontrol.c: (create_app): remove unstable in control name.
	* tests/testgtkcrystalviewer.c: (main): use a full path to nickel.gcrystal
	* gcu-0.3.pc.in: removed file.
	* gcu/gchem3d-0.3.server.in.in: removed file.

2004-12-12 Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: added de locale.
	* glade/gtkperiodic.glade: updated symbols for elements 110 and 111.

2004-12-03 Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/object.cc: fixed Object::Load. Does not anymore returns false when
	something goes wrong. Just delete the bad object.
