@@ -21,26 +21,11 @@ fi
 libtoolize --force
 intltoolize --force
 
-## generate documentation
-docdir=docs/reference/html
-if [ -x `which doxygen` ]; then
-	doxygen Doxyfile
-	echo '# This file was generated by autogen.sh DO NOT EDIT' > $docdir/Makefile.am
-	echo "" >> $docdir/Makefile.am
-	echo 'docsdir = $(datadir)/doc/gchemutils/reference/html' >> $docdir/Makefile.am
-	echo "" >> $docdir/Makefile.am
-	echo -n "docs_DATA =" >> $docdir/Makefile.am
-	for i in $docdir/*.html $docdir/*.png $docdir/*.css; do
-		echo " \\" >> $docdir/Makefile.am
-		echo -n "	"`basename $i` >> $docdir/Makefile.am
-	done
-	echo "" >> $docdir/Makefile.am
-	echo 'EXTRA_DIST = $(docs_DATA)' >> $docdir/Makefile.am
-	echo "" >> $docdir/Makefile.am
-else
-	echo "doxygen not found, documentation has not been built."
-	touch $docdir/Makefile.am
-fi
+## generate documentation archive
+cd docs/reference
+doxygen Doxyfile
+tar -czf html-upstream.tar.gz html
+cd ../../
 
 ## autoheader, automake, autoconf
 autoheader
