@@ -51,6 +51,9 @@ AM_CONDITIONAL(UPDATE_DATABASES,test "$update_databases" = "yes")
 AC_CHECK_PROG(UPDATE_DESKTOP, update-desktop-database, yes)
 AM_CONDITIONAL(WITH_UPDATE_DESKTOP,test "$UPDATE_DESKTOP" = "yes")
 
+AC_PATH_PROG(DOXYGEN, doxygen, no)
+AM_CONDITIONAL(DOXYGEN_AVAILABLE,test "$DOXYGEN" != "no")
+
 LIBGLADE_REQUIRED_VERSION=2.4.0
 GTKGLEXT_REQUIRED_VERSION=1.0.0
 GNOME_PRINT_REQUIRED_VERSION=2.4.0
